--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ computational chemical calculations using the outputs of `bullviso`
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "rdkit>=2025.9.3",
     "pandas>=2.3.3",
     "typer>=0.20.1",
 ]
@@ -17,5 +18,6 @@ dependencies = [
 include = ["bullviso_tools", "scripts"]
 
 [project.scripts]
+deduplicate = "scripts.deduplicate:app"
 energy-summary = "scripts.energy_summary:app"
 aggregate-pop-by-isomer = "scripts.aggregate_pop_by_isomer:app"
